# conan-recipes

./: .editorconfig  .gitignore  LICENSE  README.md  build.py
.github/workflows/: build_all_deps.yml  build_all_deps_macos.yml  update_recipes.yml
audacity_build_helpers/all/: conanfile.py
breakpad/0.1/: CMakeLists.txt  conanfile.py
config/: build_order.yml  build_order_qt.yml  stable_packages.yml
config/profiles/: host_apple_clang14_arm64_deb.profile  host_apple_clang14_arm64_rel.profile  host_apple_clang14_x86_64_rel.profile  host_gcc10_x86_64_rel.profile  host_gcc11_x86_64_deb.profile  host_gcc11_x86_64_rel.profile  host_gcc12_x86_64_rel.profile  host_gcc13_x86_64_rel.profile  host_msvc2019_x86_rel.profile
crashpad/: config.yml
expat/all/: conanfile.py
harfbuzz/all/: conanfile.py
kddockwidgets/all/: conandata.yml  conanfile.py
libid3tag/all/: conanfile.py
libmad/all/: conandata.yml  conanfile.py
libmp3lame/all/: conanfile.py
libtorch-binary/: config.yml
libtorch-binary/all/: conandata.yml  conanfile.py
portaudio/all/: conandata.yml  conanfile.py
portmidi/all/: conandata.yml  conanfile.py
qt/: config.yml
qt-tools/: config.yml
qt-tools/all/: conanfile.py
qt/5.x.x/: conanfile.py
qt/6.x.x/: conanfile.py
recipes/breakpad/: config.yml
recipes/cmake/: config.yml
recipes/fontconfig/: config.yml
recipes/freetype/: config.yml
recipes/kddockwidgets/: config.yml
utils/: conan-utils.py  requirements.txt
vst3sdk/: config.yml
wxwidgets/: config.yml
wxwidgets/3.1.3/: CMakeLists.txt  conandata.yml  conanfile.py
(+353 files in other folders)
